# python-project-52

./: .coverage  .env.example  .gitignore  Caddyfile.example  Dockerfile  Makefile  README.md  conftest.py  coverage.xml  db.sqlite3  docker-compose.yaml  pyproject.toml  pytest.ini  ruff.toml
.github/workflows/: build_and_deploy.yml
locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/: mixins.py  settings.py  tests.py  urls.py  utils.py  views.py
task_manager/fixtures/: label.json  status.json  task.json  test_label.json  test_status.json  test_task.json  test_user.json  user.json
task_manager/labels/: forms.py  models.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py
task_manager/labels/test_labels/: test_forms.py  test_models.py  test_post.py  test_views.py  testcase.py
task_manager/statuses/: forms.py  models.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py
task_manager/statuses/test_statuses/: test_forms.py  test_models.py  test_posts.py  test_views.py  testcase.py
task_manager/tasks/: filters.py  forms.py  models.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py
task_manager/tasks/test_tasks/: test_forms.py  test_models.py  test_post.py  test_view.py  testcase.py
task_manager/templates/: base.html  footer.html  form.html  index.html  nav_bar.html
task_manager/users/: forms.py  urls.py  views.py
tests/: test_10_session.py  test_20_users.py  test_30_task_statuses.py  test_40_labels.py  test_50_tasks.py  test_60_deletion.py
tests/fixtures/: test_data.json  users.json
(+13 files in other folders)
