[project]
name = "hexlet-code"
version = "0.1.0"
description = "Last project in Hexlet course"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.1",
    "django-bootstrap5>=25.1",
    "django-filter>=25.1",
    "pre-commit>=4.2.0",
    "python-dotenv>=1.1.0",
    "rollbar>=1.3.0",
    "coverage"
]
