[project]
name = "hexlet-code"
version = "0.1.0"
description = "Last project in Hexlet course"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.1",
    "django-bootstrap5>=25.1",
    "django-filter>=25.1",
    "pre-commit>=4.2.0",
    "python-dotenv>=1.1.0",
    "rollbar>=1.3.0",
    "coverage",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "pip>=25.1.1",
    "dj-database-url>=3.0.0",
    "pytest>=8.4.0",
    "slugify>=0.0.1",
    "playwright>=1.52.0",
    "ruff>=0.11.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["task_manager"]
